# nutrisage-pipeline

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  INFERENCE.md  LICENSE  Makefile  README.md  check_aws_status.py  docker-compose.yml  ecs-task-definition.json  env.example  fix_aws_deployment.py  nginx.conf  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_api_simple.py  test_deployment.py
.github/workflows/: aws.yml  deploy.yml  docker-image.yml
config/: alb_policy.json  api_config.json  model_config.json  preprocessing_config.json
copilot/inference/: manifest.yml
docs/: mkdocs.yml
docs/docs/: index.md
infra/: .workspace
infra/environments/dev/: manifest.yml
models/: model_metadata.pkl  nutrition_grade_model.pkl  xgb_model.joblib
notebooks/: Untitled.ipynb  data_cleaning_fe.ipynb
reports/: model_evaluation_report.md
scripts/: deploy-aws.sh  deploy.sh  load_test.py  merge_process_data.py  run_inference.py  send_request.py  test.py  test_predict.py
src/: __init__.py  config.py  dataset.py  features.py  logger.py  plots.py  preprocessing.py
src/api/: __init__.py  app.py  endpoints.py  models.py  predict.py  utils.py
src/data/: dataset.py  storage.py  utils.py
src/modeling/: feature_importance.py  predict.py  train.py  training.py
src/preprocessing/: pipeline.py  steps.py
tests/: conftest.py  test_api.py  test_data_pipeline.py  test_data_utils.py  test_feature_importance_unit.py  test_imports.py  test_modeling.py  test_modeling_unit.py  test_prediction_pipeline.py  test_preprocessing.py  test_preprocessing_pipeline.py  test_preprocessing_pipeline_integration  test_preprocessing_unit.py  test_training_pipeline.py
tests/data/: sample_nutrition_data.csv  test_config.json
