[metadata]
name = nutrisage-mlops
version = 0.1.0
description = Healthy-food intelligence, built with full-stack MLOps on AWS
author = Zohreh Asaee
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-repo/nutrisage-mlops
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.24.0
    pandas>=2.0.0
    scikit-learn>=1.3.0
    xgboost>=1.7.0
    optuna>=3.0.0
    boto3>=1.26.0
    awswrangler>=3.0.0
    typer>=0.9.0
    loguru>=0.7.0
    matplotlib>=3.7.0
    seaborn>=0.12.0
    python-dotenv>=1.0.0
    fastapi>=0.100.0
    uvicorn[standard]>=0.20.0
    pydantic>=2.0.0

[options.packages.find]
include = src*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mkdocs>=1.5.0
    mkdocs-material>=9.0.0
    jupyter>=1.0.0
    jupyterlab>=4.0.0
    ipython>=8.0.0
    notebook>=7.0.0
    ydata-profiling>=4.0.0

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short --strict-markers
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests
